--- a/src/stylesheets/style.css
+++ b/src/stylesheets/style.css
@@ -1,3 +1,26 @@
-body{
-	background:white;
+.jumbotron{
+    background-color:#EA5B31;
+    padding:4px;     
+}
+.main {
+    color: white;
+    padding-left:10px;
+}
+.container-fluid {
+    text-align:center;
+    color:#EA5B31;
+    padding-top:5px;        
+}
+.col-xs-5 {
+    padding-left: 300px;
+}
+.col-xs-6{
+    padding-right:200px
+}
+.search-input{
+	width: 40%;
+	height: 5%;
+}
+i{
+	cursor: pointer;
 }
