--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -2,13 +2,13 @@
     <div class="jumbotron">
         <header class="header-content">
             <div class="main container">
-                <div class="row-fluid">
+                <div class="col-lg-2" style="display: flex">
 
-                    <h1 style="padding-left:4px;width:80%">
+                    <h1 style="padding-left:4px;">
                         Who What Where
                     </h1>
 
-                    <div class="span6 pull-right pull-up" style="text-align:right;">
+                    <div style="flex: 50%;text-align: right;">
                         <a href="http://www.foursquare.com"><i style="font-size:24px" title="Four Square" class="fa">
                             &#xf180;</i></a>
                         <a href="http://www.yelp.com"><i style="font-size:24px" title="Yelp" class="fa">&#xf1e9;</i></a>
@@ -36,7 +36,7 @@
                             <i style="font-size:20px" class="fa" title="Get your location" ng-click="getLocation()">
                                 &#xf124;</i>
 
-                            <button type="button" class="btn btn-primary btn-lg btn-success" value="Show"
+                            <button type="button" class="searchButton" value="Show"
                                     ng-click="showResult()">Search
                             </button>
                         </div>
@@ -45,16 +45,17 @@
             </div>
         </div>
         <div class="row">
-            <div class="container-fluid" id="googleMap" style="width:100vw; height:100vw;"></div>
+            <div class="img-responsive container-fluid" id="googleMap" style="width:100%; height:75%;"></div>
         </div>
-        <div class="row">
-            <div ng-repeat="search in queryData">
-                <div>
-                    <span>{{search.name}}</span>
-                    <span>{{search.contact.phone}}</span>
-                    <span>{{search.rating}}</span>
+        <div class="flexContainer">
+            <div ng-repeat="search in queryData" class="detail-container">
+                <div class="detail-child">
                     <img ng-src="{{search.image}}"/>
+                    <span>{{search.name}}</span></br>
+                    <span ng-if="search.contact.phone"><i style="font-size:24px" class="fa">&#xf10b;</i>{{search.contact.phone}}</span></br>
+                    <span><i style="font-size:24px" class="fa">&#xf005;</i>{{search.rating}}</span>
                 </div>
+
             </div>
         </div>
     </div>
